<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.sebastiencaumes.bluffcalculator.FragmentCall"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_call_call"
                android:id="@+id/textView_call" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_call_amount"
                android:id="@+id/textView_call_amount"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"
                android:id="@+id/editText_call_amount"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_call_pot_after"
                android:id="@+id/textView_call_total_pot_after"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"
                android:id="@+id/editText_call_total_pot_after"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_call_equity"
                android:id="@+id/textView_call_equity"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"
                android:id="@+id/editText_call_equity"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_call_pot_odds"
                android:id="@+id/textView_call_pot_odds"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"

                android:id="@+id/editText_call_pot_odds"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_call_ev"
                android:id="@+id/textView_call_ev"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"
                android:id="@+id/editText_call_ev"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_call_ok"
            android:id="@+id/button_call_ok"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:onClick="calculateCall" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clear All"
                android:id="@+id/button_call_clear_all"
                android:onClick="deleteCall" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
