<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.sebastiencaumes.bluffcalculator.FragmentSemiBluff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_semibluff"
                android:id="@+id/textView_semibluff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_semi_size_before"
                android:id="@+id/textView_semi_size_before"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"
                android:id="@+id/editText_semi_size_before"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_semi_bluff_amount"
                android:id="@+id/textView_semi_bluff_amount"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"
                android:id="@+id/editText_semi_bluff_amount"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_semi_fe"
                android:id="@+id/textView_semi_fe"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"
                android:id="@+id/editText_semi_fe"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-10dp"
            android:orientation="horizontal"

            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_semi_equity_if_call"
                android:id="@+id/textView_semi_equity_if_call"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"
                android:id="@+id/editText_semi_equity_if_call"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/textView_semi_ev"
                android:id="@+id/textView_semi_ev"
                android:layout_weight="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:background="@drawable/rectangle_edittext"
                android:ems="10"
                android:id="@+id/editText_semi_ev"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttun_semi_ok"
            android:id="@+id/button_semi_ok"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:onClick="calculateSemi" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clear All"
                android:id="@+id/buttun_semi_clear"
                android:onClick="deleteSemi" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
